# DJPythia

./: .gitignore  Dockerfile  README.md  docker-compose.yml
DJPythia/: CMakeLists.txt  default.cfg  main.cc
DJPythia/cli/: CMakeLists.txt
DJPythia/cli/src/: generate.cc
DJPythia/cmake/: FindPythia8.cmake
DJPythia/data_model/: CMakeLists.txt  d_meson.cc  event.cc  event.h  origin.h  particle.cc
DJPythia/djp_analysis/: CMakeLists.txt
DJPythia/djp_analysis/include/: analysis_manager.h  d_meson_qa.h  task.h  task_d.h  tree_reader.h
DJPythia/djp_analysis/include/djp_analysis/: analysis_manager.h  task.h  task_d.h  tree_reader.h
DJPythia/djp_analysis/src/: analysis_manager.cc  d_meson_qa.cc  task.cc  task_d.cc
DJPythia/djp_data_model/: CMakeLists.txt
DJPythia/djp_data_model/include/djp_data_model/: d_meson.h  data_model_linkdef.h  event.h  origin.h  particle.h
DJPythia/djp_data_model/src/: d_meson.cc  event.cc  particle.cc
DJPythia/djp_generator/: CMakeLists.txt
DJPythia/djp_generator/include/djp_generate/: generator.h  pythia_analysis.h
DJPythia/djp_generator/src/: generator.cc  pythia_analysis.cc
DJPythia/dpj_cli/: CMakeLists.txt
DJPythia/dpj_cli/src/: analyse.cc  generate.cc
DJPythia/generator/: CMakeLists.txt  generator.cc  generator.h
DJPythia/pythia_analysis/: CMakeLists.txt  pythia_analysis.cc  pythia_analysis.h
DJPythia/tree_analysis/: CMakeLists.txt  d_meson_qa.cc  d_meson_qa.h  tree_reader.h
